Solved issue with the background image not fitting properly the screen

--- a/robot.css
+++ b/robot.css
@@ -5,7 +5,8 @@
 }
 
 body {
-  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("./assets/images/background.jpg") no-repeat center center fixed; 
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+    url("./assets/images/background.jpg") no-repeat center center fixed;
   background-size: cover;
   color: white;
   font-family: "Alegreya Sans", monospace;
